--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,21 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "es6",
-    "strict": true,
-    "jsx": "react-jsx",
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist",
-    "moduleResolution": "node",
-    "sourceMap": true
+    "target": "es5", // Поддержка старых браузеров. Если можно поднять — используйте "es6".
+    "module": "es6", // Совместимо с Webpack. Можно заменить на "ESNext" для модульного импорта.
+    "strict": true, // Включает строгий режим TypeScript.
+    "jsx": "react-jsx", // Совместимость с React 17+.
+    "esModuleInterop": true, // Позволяет использовать CommonJS-модули.
+    "skipLibCheck": true, // Ускоряет компиляцию, пропуская проверку типов в node_modules.
+    "forceConsistentCasingInFileNames": true, // Предотвращает ошибки при несовпадении регистра в путях.
+    "outDir": "./dist", // Папка для скомпилированных файлов.
+    "moduleResolution": "node", // Для корректной работы с модулями в node.
+    "sourceMap": true, // Генерация sourcemap для удобной отладки.
+    "baseUrl": "./", // Упрощает пути импорта.
+    "paths": {
+      // Настройка алиасов для удобства импорта.
+      "@/*": ["src/*"]
+    }
   },
-  "include": ["**/*"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*"], // Компилируем только файлы внутри папки src.
+  "exclude": ["node_modules", "dist"] // Исключаем node_modules и папку сборки.
 }
